@@ -73,6 +73,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
@@ -87,6 +88,7 @@
                     <execution>
                         <goals>
                             <goal>prepare-frontend</goal>
+                            <goal>build-frontend</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -128,68 +130,4 @@
             </plugin>
         </plugins>
     </build>
-
-    <profiles>
-        <profile>
-            <!-- Production mode is activated using -Pproduction -->
-            <id>production</id>
-            <dependencies>
-                <!-- Exclude development dependencies from production -->
-                <dependency>
-                    <groupId>com.vaadin</groupId>
-                    <artifactId>vaadin-core</artifactId>
-                    <exclusions>
-                        <exclusion>
-                            <groupId>com.vaadin</groupId>
-                            <artifactId>vaadin-dev</artifactId>
-                        </exclusion>
-                    </exclusions>
-                </dependency>
-            </dependencies>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.vaadin</groupId>
-                        <artifactId>vaadin-maven-plugin</artifactId>
-                        <version>${vaadin.version}</version>
-                        <executions>
-                            <execution>
-                                <goals>
-                                    <goal>build-frontend</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.springframework.boot</groupId>
-                        <artifactId>spring-boot-maven-plugin</artifactId>
-                        <configuration>
-                            <!-- all JVM flags as one space-separated string -->
-                            <jvmArguments>
-                                --patch-module java.desktop=${swing-bridge.path}/swing-bridge-patch/${swing-bridge.version}/swing-bridge-patch-${swing-bridge.version}.jar
-                                -Xbootclasspath/a:${swing-bridge.path}/swing-bridge-graphics/${swing-bridge.version}/swing-bridge-graphics-${swing-bridge.version}.jar
-                                --add-reads=java.desktop=ALL-UNNAMED
-                                --add-exports=java.desktop/sun.font=ALL-UNNAMED
-                                --add-exports=java.desktop/sun.awt=ALL-UNNAMED
-                                --add-exports=java.desktop/sun.awt.dnd=ALL-UNNAMED
-                                --add-exports=java.desktop/sun.awt.dnd.peer=ALL-UNNAMED
-                                --add-exports=java.base/sun.nio.cs=ALL-UNNAMED
-                                --add-exports=java.desktop/sun.java2d=ALL-UNNAMED
-                                --add-exports=java.desktop/sun.java2d.pipe=ALL-UNNAMED
-                                --add-exports=java.desktop/sun.awt.datatransfer=ALL-UNNAMED
-                                --add-exports=java.desktop/sun.awt.image=ALL-UNNAMED
-                                --add-exports=java.desktop/java.awt.peer=ALL-UNNAMED
-                                --add-exports=java.desktop/java.awt.dnd=ALL-UNNAMED
-                                --add-exports=java.desktop/java.awt.dnd.peer=ALL-UNNAMED
-                                --add-exports=java.desktop/sun.print=ALL-UNNAMED
-                                --add-exports=java.desktop/sun.swing=ALL-UNNAMED
-                                --add-opens=java.desktop/java.awt.event=ALL-UNNAMED
-                                --add-opens=java.desktop/sun.awt=ALL-UNNAMED
-                            </jvmArguments>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 </project>
